Stop text wrapping under image in projects and work page

--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -16,10 +16,13 @@
 .work-bubble-with-date {
   float: left;
   padding-right: 20px;
-  padding-bottom: 1.5em;
+  // padding-bottom: 1.5em;
   width: 100px;
   text-align: center;
   // height: 100px;
   // object-fit: cover;
 }
 
+.work-text {
+  overflow: hidden;
+}
